--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <body>
   <!-- 上部ナビゲーション -->
   <div class="nav-buttons">
-    <a href="https://enchanted-synonymous-beast.glitch.me/lottery.html">抽選画面</a>
-    <a href="https://enchanted-synonymous-beast.glitch.me/control.html">賞設定</a>
+    <a href="lottery.html">抽選画面</a>
+    <a href="control.html">賞設定</a>
     <a href="display.html">表示設定</a>
-    <a href="https://enchanted-synonymous-beast.glitch.me/history.html">抽選履歴</a>
+    <a href="history.html">抽選履歴</a>
   </div>
   
   <h2 style="text-align: center;">現在の各賞情報</h2>
