--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
   
   <!-- 下部ナビゲーション -->
   <div class="nav-buttons">
-    <a href="https://enchanted-synonymous-beast.glitch.me/lottery.html">抽選画面</a>
-    <a href="https://enchanted-synonymous-beast.glitch.me/control.html">賞設定</a>
+    <a href="lottery.html">抽選画面</a>
+    <a href="control.html">賞設定</a>
     <a href="display.html">表示設定</a>
-    <a href="https://enchanted-synonymous-beast.glitch.me/history.html">抽選履歴</a>
+    <a href="history.html">抽選履歴</a>
   </div>
   
   <!-- Firebase SDK と各種処理 -->
