--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <!-- 上部ナビゲーション -->
   <div class="nav-buttons">
-    <a href="lottery.html">抽選画面</a>
+    <a href="lottery.html">抽選０画面</a>
     <a href="control.html">賞設定</a>
     <a href="display.html">表示設定</a>
     <a href="history.html">抽選履歴</a>
