--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <!-- 最上段のメイン画面に戻るボタン -->
-  <a class="nav-btn" href="https://enchanted-synonymous-beast.glitch.me">メイン画面に戻る</a>
+  <a class="nav-btn" href="index.html">メイン画面に戻る</a>
   
   <h2>抽選履歴</h2>
   
@@ -63,7 +63,7 @@
   </table>
   
   <!-- 最下段のメイン画面に戻るボタン -->
-  <a class="nav-btn" href="https://enchanted-synonymous-beast.glitch.me">メイン画面に戻る</a>
+  <a class="nav-btn" href="index.html">メイン画面に戻る</a>
   
   <!-- Firebase SDK のモジュールをインポート -->
   <script type="module">
